# trading-platform

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.override.yaml  docker-compose.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
.devcontainer/: dev.Dockerfile  devcontainer.json
.github/: pull-request-template.md
.github/ISSUE_TEMPLATE/: bug-report.md
.github/workflows/: tests.yaml
docs/: README.md  index.md
docs/code-map/: core-pipeline-map.md  repository-map.md
docs/concepts/: core-runtime-responsibility-model.md  event-model.md  gate-decision-compatibility.md  risk-vs-execution-control.md
docs/flows/: control-time-and-scheduling.md  order-execution-feedback-event.md  order-submitted-event.md
docs/how-to/: add-canonical-event.md  add-core-step-test.md  update-core-step-pipeline.md  update-policy-and-execution-control.md  use-policy-evaluator.md
docs/mvp/: compatibility-matrix.md  core-step-mvp-baseline.md
docs/reference/: events-reference.md  public-api.md
docs/roadmap/: dead-code-cleanup-candidates.md  post-mvp-roadmap.md
examples/: core_step_quickstart.py  core_step_with_risk_engine.py
examples/local/: backtest.py  local.json
examples/strategies/: debug_strategy.py
scripts/: check.sh  compile-requirements.sh  post-create.sh
tests/semantics/: test_control_time_scheduling_semantics.py  test_core_pipeline_clean.py  test_core_wakeup_final_state.py  test_fill_event_reduction.py  test_market_event_contract.py  test_order_terminal_lifecycle.py  test_public_api_clean.py  test_risk_engine_pipeline_integration.py  test_risk_engine_policy_only.py  test_runnable_risk_engine_example.py  test_strategy_state_view_boundary.py
tests/semantics/gate_risk_invariants/: test_cancel_non_existing_rejected.py  test_duplicate_new_rejected.py  test_inflight_blocks_replace.py  test_rejected_intents_do_not_enter_queue_characterization.py  test_replace_noop_handled.py
tests/semantics/models/: test_canonical_processing_boundary.py  test_core_step_api_contract.py  test_core_step_decision_contract.py  test_core_step_result_contract.py  test_event_taxonomy_boundary.py  test_models_against_schemas.py  test_policy_risk_decision_contract.py
tests/semantics/queue_semantics/: test_mixed_queued_intent_dominance_sequences_characterization.py  test_new_queued_on_rate_limit.py  test_queue_cancel_dominates_new.py  test_strategy_state_pop_queued_intents_characterization.py
tests/semantics/state_transitions/: test_new_to_working.py  test_replace_to_replaced.py  test_terminal_clears_inflight.py  test_working_to_filled.py
trading_framework/: __init__.py
trading_framework/backtest/engine/: hft_engine.py
trading_framework/backtest/orchestrator/: summary.py
trading_framework/backtest/runtime/: experiment_finalize_entrypoint.py  segment_finalize_entrypoint.py
trading_framework/core/domain/: order_state_machine.py  state.py  types.py
trading_framework/core/events/: events.py
trading_framework/core/events/sinks/: sink_logging.py
trading_framework/core/execution_control/: __init__.py  execution_control.py
trading_framework/core/ports/: venue_adapter.py
trading_framework/core/risk/: risk_config.py  risk_engine.py  risk_policy.py
trading_framework/core/schemas/: fill_event.schema.json  order_intent.schema.json  order_state_event.schema.json  risk_constraints.schema.json
trading_framework/strategies/: base.py
trading_platform/: __init__.py
trading_platform/backtest/adapters/: execution.py  venue.py
trading_platform/backtest/engine/: hft_engine.py  strategy_runner.py
trading_platform/backtest/orchestrator/: planner.py  planner_models.py  s3_manifest.py  segmenter.py  summary.py
trading_platform/backtest/runtime/: entrypoint.py  experiment_finalize_entrypoint.py  mlflow_segment_logger.py  run_sweep.py  segment_finalize_entrypoint.py
trading_platform/core/domain/: reject_reasons.py  slots.py  state.py
trading_platform/core/events/: event_bus.py  event_sink.py
trading_platform/core/events/sinks/: null_event_bus.py
trading_platform/core/ports/: engine_context.py  venue_policy.py
trading_platform/core/risk/: risk_config.py  risk_engine.py
trading_platform/core/schemas/: common.schema.json  market_event.schema.json
trading_platform/strategies/: base.py  strategy_config.py
tradingchassis_core/: __init__.py
tradingchassis_core/core/domain/: __init__.py  candidate_intent.py  event_model.py  execution_control_apply.py  execution_control_decision.py  execution_control_plan.py  intent_combination.py  policy_risk_decision.py  processing.py  processing_order.py  processing_step.py  state.py  step_decision.py  step_result.py  types.py
tradingchassis_core/core/events/: event_bus.py  event_sink.py  events.py
tradingchassis_core/core/execution_control/: __init__.py  execution_control.py  types.py
tradingchassis_core/core/risk/: execution_constraints_policy.py  risk_config.py  risk_engine.py  risk_policy.py
