[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tradingchassis-core"
version = "0.1.0"
description = "Deterministic event-driven core package for intent policy and execution control."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "tradingeng@protonmail.com" }]
license = { text = "MIT" }

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

dependencies = [
  "pydantic>=2,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=9,<10",
  "import-linter>=1.11,<2",
  "ruff>=0.4,<1",
  "mypy>=1.9,<2",
  "matplotlib>=3,<4",
  "numpy>=2.0,<2.3",
]

[tool.setuptools.packages.find]
include = ["tradingchassis_core*"]

[tool.pytest.ini_options]
minversion = "9.0"
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
ignore_missing_imports = true
pretty = true
show_error_codes = true
ignore_errors = true

[tool.importlinter]
root_package = "tradingchassis_core"
include_external_packages = true

[[tool.importlinter.contracts]]
name = "Core must be pure"
type = "forbidden"
source_modules = ["tradingchassis_core.core"]
forbidden_modules = [
  "tradingchassis_core.strategies"
]
