[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "TradingChassis-core"
version = "0.1.0"
description = "Deterministic trading decision engine."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "TradingChassis Core Contributors" }]
maintainers = [{ name = "TradingChassis Core Maintainers" }]
license = "MIT"
keywords = ["trading", "deterministic", "pydantic", "event-driven", "strategy"]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Office/Business :: Financial :: Investment",
  "Topic :: Software Development :: Libraries",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Operating System :: OS Independent"
]

dependencies = [
  "pydantic>=2,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=9,<10",
  "import-linter>=1.11,<2",
  "ruff>=0.4,<1",
  "mypy>=1.9,<2",
  "build>=1,<2",
]

[project.urls]
Homepage = "https://github.com/TradingChassis"
Repository = "https://github.com/TradingChassis/core"
Documentation = "https://github.com/TradingChassis/core/tree/main/core/docs"
Changelog = "https://github.com/TradingChassis/core/blob/main/core/CHANGELOG.md"
Issues = "https://github.com/TradingChassis/core/issues"

[tool.setuptools.packages.find]
include = ["tradingchassis_core*"]

[tool.pytest.ini_options]
minversion = "9.0"
addopts = "-ra"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
ignore_missing_imports = true
pretty = true
show_error_codes = true

[tool.importlinter]
root_package = "tradingchassis_core"
include_external_packages = true

[[tool.importlinter.contracts]]
name = "Core stays runtime-independent"
type = "forbidden"
source_modules = ["tradingchassis_core"]
forbidden_modules = []
